2011-10-14  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* takaxp-org-mode.el: Fix org-agenda-files duplication

2011-10-08  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* takaxp-keybinding.el: Swap keybindings
	Swap C-c w for C-M-w.
	C-c w: sdic-describe-word
	C-M-w: sdic-describe-word-at-point

	* takaxp-org-mode.el: Add a new capture template

	* takaxp-util.el: Add frame hight control methods
	reset-frame-height-30 will set the height 30.
	reset-frame-height-60 will set the height 60.

2011-09-18  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* ALL: Update every file and add new files
	Separate face config. as takaxp-face.el from takaxp-init.el
	Separate private values as takaxp-private.el from takaxp-init.el
	Add takaxp-org-mode.el as an open file
	Add .emacs

2011-03-22  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* takaxp-mac.el: Move test settings
	Some settings under testing for linux environment are removed.
    	hideshowvis, matlab.el, auto-complete, and igerp will be restored in
	the next upcoming update.

	* takaxp-utility.el (insert-formatted-signature): Add a new function
	This function insert a ChageLog formatted signature.
    	M-x insert-formatted-signature
	 => 2011-03-22  Takaaki ISHIKAWA  <takaxp@ieee.org>

	Need an additional setting. This setting is familiar to ChangeLog users.
	(setq user-full-name "Your NAME")
    	(setq user-mail-address "your@email.address")

2011-03-02  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* ALL: Change filenames
	Add prefix "takaxp-" to avoid conflicting with existing files.