@@ -1,3 +1,10 @@
+2011-10-23  Takaaki ISHIKAWA  <takaxp@ieee.org>
+
+	* takaxp-init.el: Remove config. for sense-region.el
+	Use CUA-mode for rectangler region selection
+
+	* takaxp-init.el: Add config. for anything-grep-alist
+
 2011-10-14  Takaaki ISHIKAWA  <takaxp@ieee.org>
 
 	* takaxp-org-mode.el: Fix org-agenda-files duplication
